force-app/main/default/objects/Item__c/fields/Allow_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Allow_Ordering__c</fullName>
    <formula>TEXT(Status__c) == &apos;Available&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Ordering</label>
    <type>Checkbox</type>
</CustomField>