force-app/main/default/objects/Item__c/fields/Num_of_Rated_Orders__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Rated_Orders__c</fullName>
    <label># of Rated Orders</label>
    <summaryFilterItems>
        <field>Order__c.Rating__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Order__c.Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>