force-app/main/default/objects/Item__c/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <label>Recipe</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>