force-app/main/default/objects/Item__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <label>Total Rating</label>
    <summarizedField>Order__c.Rating__c</summarizedField>
    <summaryForeignKey>Order__c.Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>